Bug fix: Correctly comment multiline comments